# antifraud_service

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
prometheus/: prometheus.yml
src/: run.py
src/app/: config.py  main.py
src/app/api/routers/: __init__.py  antifraud.py  healthz.py  metrics.py
src/app/api/schemas/: __init__.py  antifraud.py
src/app/dependencies/: cache.py
src/app/metrics/: http.py
src/app/services/: __init__.py  antifraud.py
src/config/: local.yaml
src/tests/: conftest.py
src/tests/unit/: test_antifraud_endpoint.py
